# extension_kokoro_tts_api

./: .gitignore  README.md  config.json  pyproject.toml  setup.py  start_local.py
.github/workflows/: build_wheel.yml
extension_kokoro_tts_api/: Presets.py  ResponseFormatEnum.py  api.py  extension_metadata.py  extension_tts_generation_webui_metadata.py  main.py  router.py  threader.py  transcribe_audio_file.py
extension_kokoro_tts_api/api/: audio.py  models.py
extension_kokoro_tts_api/config/: metadata.py
extension_kokoro_tts_api/models/: create_speech_request.py
extension_kokoro_tts_api/services/: __init__.py  voice_service.py
extension_openai_tts_api/: extension_metadata.py  main.py  migrate_config.py  router.py
extension_openai_tts_api/api/: info.py
extension_openai_tts_api/models/: create_speech_request.py
extension_openai_tts_api/services/: transcription_service.py  tts_service.py  voice_service.py
extension_openai_tts_api/utils/: audio_utils.py  presets.py
scripts/: stream-wav.js
tests/: smoke_test_fireredtts2.py  smoke_test_higgs_v2.py  smoke_test_megatts3.py  smoke_test_parler_tts.py  smoke_test_piper.py  smoke_test_vall_e_x.py
tts_webui_extension/openai_tts_api/: extension_metadata.py  main.py  router.py  threader.py
tts_webui_extension/openai_tts_api/api/: __init__.py  models.py
tts_webui_extension/openai_tts_api/models/: __init__.py  create_speech_request.py
tts_webui_extension/openai_tts_api/services/: __init__.py  tts_service.py  voice_service.py
tts_webui_extension/openai_tts_api/utils/: __init__.py  presets.py
