[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.openai_tts_api"
version = "0.16.1"
description = "OpenAI compatible TTS API with support for multiple TTS models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "rsxdalv" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "gradio",
    "uvicorn",
    "psutil",
    "fastapi",
    "pydantic",
    "requests",
    "scipy",
    "numpy",
]

[project.optional-dependencies]
chatterbox = ["tts_webui_extension.chatterbox"]
f5-tts = ["tts_webui_extension.f5_tts"]
fireredtts2 = ["tts_webui_extension.fireredtts2"]
higgs_v2 = ["tts_webui_extension.higgs_v2"]
kitten-tts = ["tts_webui_extension.kitten_tts"]
kokoro = ["tts_webui_extension.kokoro"]
megatts3 = ["tts_webui_extension.megatts3"]
mms = ["tts_webui_extension.mms"]
parler-tts = ["tts_webui_extension.parler_tts"]
piper-tts = ["tts_webui_extension.piper_tts"]
rvc = ["tts_webui_extension.rvc"]
styletts2 = ["tts_webui_extension.styletts2"]
vall-e-x = ["tts_webui_extension.vall_e_x"]


[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.openai_tts_api"

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
